# drone_command_server_rpi

./: CMakeLists.txt  Dockerfile  UserConfig.txt  main.cpp  server.cpp
common/: dji_linux_helpers.cpp  dji_linux_helpers.hpp
proto/: message_strocuture.pb.cc  message_strocuture.pb.h
server/: drone_command_server.cpp  drone_command_server.hpp
